# resume-jd-matcher

./: .gitignore  README.md  app.py  pyproject.toml
src/resume_jd_matcher/: crew.py  main.py
src/resume_jd_matcher/config/: agents.yaml  tasks.yaml
